# rust-katas

./: Cargo.toml  README.md  build.rs
protos/: sample.proto
src/: async_book.rs  futures_ex.rs  hlist.rs  hlist_bin.rs  insertion_sort.rs  iwatch_file.rs  lib.rs  linreg.rs  max_subarray.rs  merge_arrays.rs  poll_fn_stream.rs  print_exec.rs  proto_sample.rs  quick_sort.rs  read_ints.rs  sum2020.rs  two_sum.rs  valid_pass.rs  watch_file.rs
src/protos/: mod.rs  sample.rs
