[package]
name = "rust-katas"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

[lib]
name ="rust_katas"
path = "src/lib.rs"

[[bin]]
name = "max_subarray"
path = "src/max_subarray.rs"

[[bin]]
name = "read_ints"
path = "src/read_ints.rs"

[[bin]]
name = "merge_arrays"
path = "src/merge_arrays.rs"

[[bin]]
name = "print_exec"
path = "src/print_exec.rs"

[[bin]]
name = "async_book"
path = "src/async_book.rs"

[dependencies]
ndarray = { version = "^0.12" }
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.6.1"

[dev-dependencies]

[build-dependencies]
