[package]
name = "rust-katas"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

[lib]
name ="rust_katas"
path = "src/lib.rs"

[[bin]]
name = "max_subarray"
path = "src/max_subarray.rs"

[[bin]]
name = "read_ints"
path = "src/read_ints.rs"

[[bin]]
name = "async_book"
path = "src/async_book.rs"

[[bin]]
name = "sum2020"
path = "src/sum2020.rs"

[[bin]]
name = "valid_pass"
path = "src/valid_pass.rs"

[[bin]]
name = "poll_fn_stream"
path = "src/poll_fn_stream.rs"

[dependencies]
ndarray = { version = "0.15" }

futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }

[dev-dependencies]

[build-dependencies]
