[package]
name = "rust-katas"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

[lib]
name ="rust_katas"
path = "src/lib.rs"

[[bin]]
name = "two_sum"
path = "src/two_sum.rs"

[[bin]]
name = "max_subarray"
path = "src/max_subarray.rs"

[[bin]]
name = "read_ints"
path = "src/read_ints.rs"

[[bin]]
name = "async_book"
path = "src/async_book.rs"

[[bin]]
name = "sum2020"
path = "src/sum2020.rs"

[[bin]]
name = "valid_pass"
path = "src/valid_pass.rs"

[[bin]]
name = "poll_fn_stream"
path = "src/poll_fn_stream.rs"

[[bin]]
name = "watch_file"
path = "src/watch_file.rs"

[[bin]]
name = "iwatch_file"
path = "src/iwatch_file.rs"

[[bin]]
name = "pyramid"
path = "src/bin/pyramid.rs"

[[bin]]
name = "adv_6_22"
path = "src/bin/adv_6_22.rs"

[[bin]]
name = "tokio_timeout"
path = "src/bin/tokio_timeout.rs"

[[bin]]
name = "spectra"
path = "src/bin/spectra.rs"

[[bin]]
name = "scatter_vec_of_vec"
path = "src/bin/scatter_vec_of_vec.rs"

[dependencies]
ndarray = { version = "0.15" }
pin-project-lite = "0.2"

anyhow = "1"
itertools = "0.10"

futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

notify = "5"

mpi = { git = "https://github.com/rsmpi/rsmpi.git" }

[dev-dependencies]

[build-dependencies]
